@@ -1,3 +1,9 @@
+2004-09-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/i386/fpu/s_fdim.S (__fdim): Handle +inf/+inf.
+	* sysdeps/i386/fpu/s_fdimf.S (__fdimf): Likewise.
+	* sysdeps/i386/fpu/s_fdiml.S (__fdiml): Likewise.
+
 2004-09-28  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/nscd_getai.c: Use NO_MAPPING instead of MAP_FAILED for test
